--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main {
     padding-top: 20px;
 }
 
-.container {
+.containerIndex {
     position: relative;
     text-align: center;
 }
@@ -34,6 +34,125 @@ main {
     font-size: 90px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+body {
+    font-family: Arial, Verdana, sans-serif;
+}
+
+header {
+    height: 150px;
+    max-width: 840px;
+ }
+
+main, header, body {
+    margin: auto;
+    margin-top: 10px;
+    text-align: center;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+    margin-bottom: 70px;
+}
+
+.logo {
+    max-width: 250px;
+}
+
+a {
+    color: white;
+}
+
+img{
+    max-width: 100%;
+    }
+
+.cta-button, .submitButton {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #2A7497;
+    border-radius: 20px;
+}
+
+.cta-button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    color: black;
+    padding-bottom:8px;
+}
+
+p {
+    text-align: left;
+    margin-bottom: 40px;
+}
+
+.info {
+    margin-bottom: 10px;
+}
+
+.text {
+    padding-left: 30px;
+}
+
+.sizes {
+    display: flex;
+    gap: 8px;
+}
+
+.size {
+    display: inline;
+    max-width: 10px;
+    padding: 20px;
+    background-color: #2a749735;
+    border-radius: 10px;
+}
+
+.size:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/* Container holding the image and the text */
+.container {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    max-width: 840px;
+  }
+
+.category-item {
+    position: relative;
+    padding: 3px;
+    margin-bottom: 15px;
+    display: inline-block;
+}
+
+.category-item:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/* Centered text */
+.activity {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    opacity: 90%;
+    font-style: oblique;
+    background-color: rgba(0, 0, 0, 0.62);
+  }
 
 footer {
     background-color: rgb(192, 182, 255);
