--- a/styles.css/common.css
+++ b/styles.css/common.css
@@ -164,6 +164,10 @@ footer {
     text-align: center;
 }
 
+.products {
+    max-width: 840px;
+}
+
 @media(max-width: 600px){
     nav {
         text-align: center;
