--- a/styles.css/item.css
+++ b/styles.css/item.css
@@ -3,7 +3,7 @@ img {
   }
 
 h2 {
-    text-align: left;
+    text-align: center;
 }  
 
 .container {
@@ -14,6 +14,12 @@ h2 {
     max-width: 640px;
   }
 
+/*.category-item {
+    position: relative;
+    padding: 3px;
+    background-color: #71b8d8;
+} */
+
 .item {
     position: relative;
     padding: 3px;
@@ -22,6 +28,8 @@ h2 {
 
 p {
     color: black;
+    text-align: center;
+    max-width: 350px;
 }
 
 .text {
